Code review changes